          Monotone extension commands to contrib/command/:
          "mtn base", "mtn fuse", "mtn revision", "mtn conflicts".

        - mtn log now prints a single dot for a project's root
          directory instead of an empty string.

        - mtn now warns if changes to a file will be ignored because
          the file has been deleted on one side of a merge.

        Internal

        - Update Botan to 1.7.2.

	Other

	- The monotone manual is now licensed under the GPL rather than
	  the GFDL.

Fri Oct 25 22:35:33 UTC 2007

        0.37 release.

        Changes

        - mtn db kill_rev_locally now checks for an existing workspace
          before the revision is killed and tries to apply the changes
          of this particular revision back to the workspace to allow
          easy re-committing afterwards

        - the "--brief" switch for mtn annotate has been renamed to
          "--revs-only" for clarity

        - mtn help now lists the commands (and their aliases) available
          within a group, so its easier to get an overview which commands
          are available at all

        - the "MTN_MERGE=diffutils" merger (provided by std_hooks.lua)
          was improved. It now accepts a MTN_MERGE_DIFFUTILS environment
          variable which can be used to control its behaviour
          through comma-separated "key[=value]" entries. Currently
          supported entries are "partial" for doing a partial
          batch/non-modal 3-way merge conflict "resolution" which uses
          embedded content conflict markers and "diff3opts=[...]" and
          "sdiffopts=[...]" for passing arbitrary options to the used
          "diff3" and "sdiff" tools. When used in combination with "mtn
          merge_into_workspace" this way one especially can achieve a
          CVS/SVN style non-modal workspace-based merging.

        - There is a new revision selector: "p:REV" selects the
          parent(s) of revision REV.  For example, if a revision has